--- a/templates/tasks/compile-kfp-pipeline.yaml
+++ b/templates/tasks/compile-kfp-pipeline.yaml
@@ -37,27 +37,55 @@ spec:
           ls -la
           
           # Install required dependencies
-          python3 -m pip install kfp==2.9.0 kfp-kubernetes==1.3.0
+          python3 -m pip install kfp==2.9.0 kfp-kubernetes==1.3.0 pyyaml
           
-          # Update metadata in the pipeline script
+          # Create dynamic compilation script
           cat > compile_pipeline.py << EOF
           import kfp
-          from prod_train_save_pipeline import training_pipeline
+          import yaml
+          import importlib
+          import os
           
-          metadata = {
-              "hyperparameters": {
-                  "epochs": 2
-              },
-              "model_name": "tb_model",
+          # Load pipeline configuration
+          config_file = "pipeline_config.yaml"
+          if os.path.exists(config_file):
+              with open(config_file, 'r') as f:
+                  config = yaml.safe_load(f)
+              print(f"Loaded configuration from {config_file}")
+          else:
+              # Fallback to default configuration
+              config = {
+                  "entrypoint": {
+                      "module": "prod_train_save_pipeline",
+                      "function": "training_pipeline"
+                  },
+                  "metadata": {
+                      "hyperparameters": {"epochs": 2},
+                      "model_name": "default-model",
+                      "prod_flag": True
+                  }
+              }
+              print(f"Using default configuration (no {config_file} found)")
+          
+          # Dynamic import of the pipeline function
+          module_name = config["entrypoint"]["module"]
+          function_name = config["entrypoint"]["function"]
+          
+          print(f"Importing {function_name} from {module_name}")
+          module = importlib.import_module(module_name)
+          pipeline_function = getattr(module, function_name)
+          
+          # Build metadata by merging config defaults with runtime values
+          metadata = config.get("metadata", {}).copy()
+          metadata.update({
               "version": "${VERSION}",
               "cluster_domain": "$(params.CLUSTER_DOMAIN)",
-              "model_storage_pvc": "model-pvc",
-              "prod_flag": True
-          }
+              "model_storage_pvc": "model-pvc"
+          })
           
           print(f"Compiling pipeline with metadata: {metadata}")
           kfp.compiler.Compiler().compile(
-              training_pipeline, 
+              pipeline_function, 
               '$(params.PIPELINE_NAME).yaml', 
               pipeline_parameters=metadata
           )
