✨9k models gitops setup✨

--- a/templates/tasks/deploy-or-raise-pr.yaml
+++ b/templates/tasks/deploy-or-raise-pr.yaml
@@ -71,6 +71,7 @@ spec:
           git config --global user.name "🐈 Tekton 🐈"
           git config --global push.default simple
           git config --global --add safe.directory '*'
+          git pull origin main
           git add $(params.DEPLOY_ENVIRONMENT)/$(params.MODEL_NAME)/config.yaml
           git commit -m "🚀 AUTOMATED COMMIT - Deployment of $(params.MODEL_NAME) for version $(params.VERSION) 🚀" || rc=$?
           git remote set-url origin $(cat $HOME/.git-credentials)/nine-thousand-models/nine-thousand-models-gitops.git
@@ -89,14 +90,14 @@ spec:
           git commit -m "🚀 AUTOMATED COMMIT - Deployment of $(params.MODEL_NAME) for version $(params.VERSION) 🚀" || rc=$?
           git remote set-url origin $(cat $HOME/.git-credentials)/nine-thousand-models/nine-thousand-models-gitops.git
           git push origin $(params.MODEL_NAME)-$(params.VERSION)
-          curl --location 'https://gitea-gitea.{{ .Values.cluster_domain }}/api/v1/repos/{{ .Values.USER_NAME }}/mlops-gitops/pulls' --user 'opentlc-mgr:myPassw0rd' --header 'accept: application/json' --header 'Content-Type: application/json' \
-            --data '{
-                "assignee": "{{ .Values.USER_NAME }}",
-                "base": "main",
-                "body": "Experiment results can be found in [Model Registry](https://rhods-dashboard-redhat-ods-applications.{{ .Values.cluster_domain }}/modelRegistry/{{ .Values.USER_NAME }}-prod-registry/).",
-                "head": "$(params.MODEL_NAME)-$(params.VERSION)",
-                "title": "🤖 Model $(params.MODEL_NAME):$(params.VERSION) Deployment"
-            }'
+          # curl --location 'https://gitea-gitea.{{ .Values.cluster_domain }}/api/v1/repos/{{ .Values.USER_NAME }}/mlops-gitops/pulls' --user 'opentlc-mgr:myPassw0rd' --header 'accept: application/json' --header 'Content-Type: application/json' \
+          #   --data '{
+          #       "assignee": "{{ .Values.USER_NAME }}",
+          #       "base": "main",
+          #       "body": "Experiment results can be found in [Model Registry](https://rhods-dashboard-redhat-ods-applications.{{ .Values.cluster_domain }}/modelRegistry/{{ .Values.USER_NAME }}-prod-registry/).",
+          #       "head": "$(params.MODEL_NAME)-$(params.VERSION)",
+          #       "title": "🤖 Model $(params.MODEL_NAME):$(params.VERSION) Deployment"
+          #   }'
 
-            echo "☘️ A pull request is raised for prod: https://gitea-gitea.{{ .Values.cluster_domain }}/{{ .Values.USER_NAME }}/mlops-gitops/pulls/"
+            echo "☘️ A pull request is raised for prod $(params.MODEL_NAME) - v$(params.VERSION)"
         fi
