--- a/templates/rbac/rbac.yaml
+++ b/templates/rbac/rbac.yaml
@@ -1,42 +1,42 @@
-# ---
-# apiVersion: rbac.authorization.k8s.io/v1
-# kind: RoleBinding
-# metadata:
-#   name: {{ .Values.USER_NAME }}-test-edit
-#   namespace: {{ .Values.USER_NAME }}-test
-# roleRef:
-#   apiGroup: rbac.authorization.k8s.io
-#   kind: ClusterRole
-#   name: edit
-# subjects:
-# - kind: ServiceAccount
-#   name: pipeline
-#   namespace: {{ .Values.USER_NAME }}-toolings
-# ---
-# apiVersion: rbac.authorization.k8s.io/v1
-# kind: RoleBinding
-# metadata:
-#   name: {{ .Values.USER_NAME }}-prod-edit
-#   namespace: {{ .Values.USER_NAME }}-prod
-# roleRef:
-#   apiGroup: rbac.authorization.k8s.io
-#   kind: ClusterRole
-#   name: edit
-# subjects:
-# - kind: ServiceAccount
-#   name: pipeline
-#   namespace: {{ .Values.USER_NAME }}-toolings
-# ---
-# apiVersion: rbac.authorization.k8s.io/v1
-# kind: RoleBinding
-# metadata:
-#   name: {{ .Values.USER_NAME }}-tekton-image-pusher-rolebinding
-#   namespace: {{ .Values.USER_NAME }}-test
-# subjects:
-# - kind: ServiceAccount
-#   name: pipeline
-#   namespace: {{ .Values.USER_NAME }}-toolings
-# roleRef:
-#   apiGroup: rbac.authorization.k8s.io
-#   kind: ClusterRole
-#   name: system:image-pusher
+---
+apiVersion: rbac.authorization.k8s.io/v1
+kind: RoleBinding
+metadata:
+  name: fika-test-edit
+  namespace: fika-test
+roleRef:
+  apiGroup: rbac.authorization.k8s.io
+  kind: ClusterRole
+  name: edit
+subjects:
+- kind: ServiceAccount
+  name: pipeline
+  namespace: nine-thousand-pipelines
+---
+apiVersion: rbac.authorization.k8s.io/v1
+kind: RoleBinding
+metadata:
+  name: fika-prod-edit
+  namespace: fika-prod
+roleRef:
+  apiGroup: rbac.authorization.k8s.io
+  kind: ClusterRole
+  name: edit
+subjects:
+- kind: ServiceAccount
+  name: pipeline
+  namespace: nine-thousand-pipelines
+---
+apiVersion: rbac.authorization.k8s.io/v1
+kind: RoleBinding
+metadata:
+  name: fika-tekton-image-pusher-rolebinding
+  namespace: fika-test
+subjects:
+- kind: ServiceAccount
+  name: pipeline
+  namespace: nine-thousand-pipelines
+roleRef:
+  apiGroup: rbac.authorization.k8s.io
+  kind: ClusterRole
+  name: system:image-pusher
