--- a/templates/tasks/generate-sboms.yaml
+++ b/templates/tasks/generate-sboms.yaml
@@ -1,4 +1,3 @@
-{{ if eq .Values.generate_sboms true }}
 ---
 apiVersion: tekton.dev/v1beta1
 kind: Task
@@ -8,7 +7,7 @@ spec:
   workspaces:
     - name: output
   params:
-    - name: APPLICATION_NAME
+    - name: MODEL_NAME
       description: Name of the application
       type: string
     - name: PROJECT_NAME
@@ -37,6 +36,5 @@ spec:
         chmod -R 775 /tmp/cosign
 
         oc registry login
-        /tmp/syft -o spdx `oc registry info`/$(params.PROJECT_NAME)-test/$(params.APPLICATION_NAME):$(params.VERSION) > $(params.PROJECT_NAME)-test-$(params.APPLICATION_NAME)-$(params.VERSION).sbom
-        /tmp/cosign attest --key k8s://$(params.PROJECT_NAME)-toolings/$(params.PROJECT_NAME)-cosign --yes --predicate $(params.PROJECT_NAME)-test-$(params.APPLICATION_NAME)-$(params.VERSION).sbom `oc registry info`/$(params.PROJECT_NAME)-test/$(params.APPLICATION_NAME):$(params.VERSION)
-{{- end }}
+        /tmp/syft -o spdx `oc registry info`/$(params.PROJECT_NAME)-test/$(params.MODEL_NAME):$(params.VERSION) > $(params.PROJECT_NAME)-test-$(params.MODEL_NAME)-$(params.VERSION).sbom
+        /tmp/cosign attest --key k8s://nine-thousand-pipelines/$(params.PROJECT_NAME)-cosign --yes --predicate $(params.PROJECT_NAME)-test-$(params.MODEL_NAME)-$(params.VERSION).sbom `oc registry info`/$(params.PROJECT_NAME)-test/$(params.MODEL_NAME):$(params.VERSION)
